[gd_scene load_steps=3 format=3 uid="uid://b3jlbpgmk8ie7"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_uxo7o"]
[ext_resource type="Theme" uid="uid://vydp5cpe6ed" path="res://Assets/Theme/MainMenuTheme.tres" id="2_bb0k8"]

[node name="MainMenu" type="Panel"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_bb0k8")
script = ExtResource("1_uxo7o")

[node name="PlayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 405.0
offset_top = 314.0
offset_right = 581.0
offset_bottom = 408.0
theme = ExtResource("2_bb0k8")
text = "Play"

[node name="OptionsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 567.0
offset_top = 571.0
offset_right = 878.0
offset_bottom = 619.0
theme = ExtResource("2_bb0k8")
theme_override_font_sizes/font_size = 48
text = "OPTIONS"

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
